--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "test": "xo",
-    "start": "electron .",
+    "start": "electron ./app",
     "build": "electron-packager . --out=dist --asar --overwrite --all"
   },
   "files": [
@@ -25,7 +25,8 @@
     "electron"
   ],
   "dependencies": {
-    "electron-debug": "^1.0.0"
+    "electron-debug": "^1.0.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "devtron": "^1.1.0",
