--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "xo",
     "start": "electron ./app",
-    "build": "electron-packager . --out=dist --asar --overwrite --all"
+    "build": "electron-packager ./app --out=dist --asar --overwrite --all"
   },
   "files": [
     "index.js",
