--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "electron-debug": "^1.0.0",
+    "promise": "^7.1.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
