--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "test": "xo",
-    "start": "electron ./app",
-    "build": "electron-packager ./app --out=dist --asar --overwrite --all"
+    "start": "electron .",
+    "build": "electron-packager . --out=dist --asar --overwrite --all"
   },
   "files": [
     "index.js",
@@ -30,6 +30,7 @@
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "electron-builder": "^13.3.2",
     "devtron": "^1.1.0",
     "electron-packager": "^8.0.0",
     "electron": "^1.3.3",
