--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "electron-debug": "^1.0.0",
     "promise": "^7.1.1",
+    "request": "^2.79.0",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
